--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <title>Vite App</title>
 </head>
 
-<body class="">
-  <nav class="navbar navbar-expand-lg navbar-dark">
+<body>
+  <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
     <div class="container">
       <a class="navbar-brand" href="#">
         <img src="assets/svg/logo.svg" width="40" height="40" alt="">
@@ -37,31 +37,100 @@
     </div>
   </nav>
 
-  <main class="container">
-
-    <section id="section1" class="blob blob-right">
-      <div class="content row">
-        <div class="col-sm-12 col-md-6 text">
-          <h1>Gemeinsam nach<br />Paris - 2024!</h1>
-          <p class="">
-            Jeder Sportler träumt von einem Start bei Olympischen Spielen. Kristina und
-            Sebastian Hendel aus Reichenbach verbindet die Liebe zueinander und zum
-            Laufsport. Ein gemeinsamer Start bei Olympia 2024 in Paris ist ihr großes
-            Ziel.
+  <header class="container blob">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <div class="text">
+          <h1>Gemeinsam nach Paris</h1>
+          <p>
+            Jeder Sportler träumt von einem Start bei Olympischen Spielen. Kristina und Sebastian
+            Hendel aus
+            Reichenbach verbindet die Liebe zueinander und zum Laufsport. Ein gemeinsamer Start bei
+            Olympia 2024
+            in Paris ist ihr großes Ziel.
           </p>
         </div>
-        <div
-          class="col-sm-12 col-md-6 image d-flex align-items-end justify-content-end blob blob-bottom">
-          <img class="img-fluid" src="assets/img/008_ret-sw-crop.png" alt="">
+      </div>
+      <div class="col-sm-12 col-md-6 blob blob-bottom">
+        <div class="image">
+          <img class="img-fluid" src="assets/img/no-bg/008_ret-sw.png"
+            alt="Kristina und Sebastian Hendel Seite an Seite im Trainingsanzug">
         </div>
       </div>
-    </section>
+    </div>
+  </header>
 
-    <section id="section2" class="">
+  <section id="section1" class="">
 
-    </section>
+  </section>
 
-  </main>
+  <section id="section2" class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image">
+        <img class="img-fluid" src="assets/img/no-bg/114_ret-sw.png"
+          alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt Ganzkörperaufnahme">
+      </div>
+      <div class="col-sm-12 col-md-6 order-1 order-md-2">
+        <div class="text">
+          <h2>Seit 2015 unzertrennlich</h2>
+          <p>
+            Kristian und Sebastian Hendel lernten sich 2015 beim Sportstudium in New York kennen und
+            lieben.
+            Seitdem verfolgen sie ihre sportlichen Ziele gemeinsam. Dabei galt es einige ungeplante
+            Hürden zu
+            überwinden.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="section3" class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <div class="text">
+          <h2>Kristina Hendel</h2>
+          <p>
+            ...gehört von Kindesbeinen an zu den besten Läuferinnen ihres Heimatlandes Kroatien.
+            Dort hält sie
+            noch immer einen nationalen Rekord. Je länger ihre Karriere andauert, desto länger
+            werden auch ihre
+            Erfolgsstrecken.
+          </p>
+        </div>
+      </div>
+      <div
+        class="col-sm-12 col-md-6 blob blob-right image justify-content-center justify-content-md-end">
+        <img class="img-fluid" src="assets/img/no-bg/011_ret-sw.png"
+          alt="Kristina Hendel im Trainingsanzug Ganzkörperaufnahme">
+      </div>
+    </div>
+  </section>
+
+  <section id="section3" class="container">
+    <div class="row">
+      <div
+        class="col-sm-12 col-md-6 blob blob-left image justify-content-center justify-content-md-start">
+        <img class="img-fluid" src="assets/img/no-bg/017_ret-sw.png"
+          alt="Sebastian Hendel im Trainingsanzug Ganzkörperaufnahme">
+      </div>
+      <div class="col-sm-12 col-md-6">
+        <div class="text">
+          <h2>Sebastian Hendel</h2>
+          <p>
+            ...verdankt seinen Namen einem ganz Großen der Leichtathletik. Dass der Reichenbacher
+            einmal eine
+            große Läuferkarriere einschlagen würde, konnten sich seine ersten Trainer allerdings
+            kaum
+            vorstellen.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
 </body>
 
 </html>
