--- a/index.html
+++ b/index.html
@@ -37,99 +37,148 @@
     </div>
   </nav>
 
-  <header class="container blob">
-    <div class="row">
-      <div class="col-sm-12 col-md-6">
-        <div class="text">
-          <h1>Gemeinsam nach Paris</h1>
-          <p>
-            Jeder Sportler träumt von einem Start bei Olympischen Spielen. Kristina und Sebastian
-            Hendel aus
-            Reichenbach verbindet die Liebe zueinander und zum Laufsport. Ein gemeinsamer Start bei
-            Olympia 2024
-            in Paris ist ihr großes Ziel.
-          </p>
+  <main>
+    <header class="container blob">
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <div class="text animate-text left">
+            <h1>Gemeinsam nach Paris</h1>
+            <p>
+              Jeder Sportler träumt von einem Start bei Olympischen Spielen. Kristina und Sebastian
+              Hendel aus
+              Reichenbach verbindet die Liebe zueinander und zum Laufsport. Ein gemeinsamer Start
+              bei
+              Olympia 2024
+              in Paris ist ihr großes Ziel.
+            </p>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 blob blob-bottom">
+          <div class="image animate-image">
+            <img class="img-fluid" src="assets/img/no-bg/008_ret-sw.png"
+              alt="Kristina und Sebastian Hendel Seite an Seite im Trainingsanzug">
+          </div>
         </div>
       </div>
-      <div class="col-sm-12 col-md-6 blob blob-bottom">
-        <div class="image">
-          <img class="img-fluid" src="assets/img/no-bg/008_ret-sw.png"
-            alt="Kristina und Sebastian Hendel Seite an Seite im Trainingsanzug">
+    </header>
+
+    <section class="sponsors hide-on-mobile">
+      <div class="row blob-row">
+        <div class="col-6 blob blob-left"></div>
+        <div class="col-6 blob blob-right"></div>
+      </div>
+      <div class="container">
+        <div class="row sponsor-row-1">
+          <div class="col-4">
+            <div class="image">
+              <img src="assets/img/sponsors/cropped-DATEC-Ideen-rund-um-dokumente.png" alt=""
+                class="img-fluid">
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="image">
+              <img src="assets/img/sponsors/cropped-DATEC-Ideen-rund-um-dokumente.png" alt=""
+                class="img-fluid">
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="image">
+              <img src="assets/img/sponsors/cropped-DATEC-Ideen-rund-um-dokumente.png" alt=""
+                class="img-fluid">
+            </div>
+          </div>
+        </div>
+        <div class="row sponsor-row-2">
+          <div class="col-4">
+            <div class="image">
+              <img src="assets/img/sponsors/cropped-DATEC-Ideen-rund-um-dokumente.png" alt=""
+                class="img-fluid">
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="image">
+              <img src="assets/img/sponsors/cropped-DATEC-Ideen-rund-um-dokumente.png" alt=""
+                class="img-fluid">
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="image">
+              <img src="assets/img/sponsors/cropped-DATEC-Ideen-rund-um-dokumente.png" alt=""
+                class="img-fluid">
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </header>
+    </section>
 
-  <section id="section1" class="">
-
-  </section>
-
-  <section id="section2" class="container">
-    <div class="row">
-      <div class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image">
-        <img class="img-fluid" src="assets/img/no-bg/114_ret-sw.png"
-          alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt Ganzkörperaufnahme">
-      </div>
-      <div class="col-sm-12 col-md-6 order-1 order-md-2">
-        <div class="text">
-          <h2>Seit 2015 unzertrennlich</h2>
-          <p>
-            Kristian und Sebastian Hendel lernten sich 2015 beim Sportstudium in New York kennen und
-            lieben.
-            Seitdem verfolgen sie ihre sportlichen Ziele gemeinsam. Dabei galt es einige ungeplante
-            Hürden zu
-            überwinden.
-          </p>
+    <section class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image">
+          <img class="img-fluid animate-image" src="assets/img/no-bg/114_ret-sw.png"
+            alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt Ganzkörperaufnahme">
+        </div>
+        <div class="col-sm-12 col-md-6 order-1 order-md-2">
+          <div class="text animate-text right">
+            <h2>Seit 2015 unzertrennlich</h2>
+            <p>
+              Kristian und Sebastian Hendel lernten sich 2015 beim Sportstudium in New York kennen
+              und
+              lieben.
+              Seitdem verfolgen sie ihre sportlichen Ziele gemeinsam. Dabei galt es einige
+              ungeplante
+              Hürden zu
+              überwinden.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="section3" class="container">
-    <div class="row">
-      <div class="col-sm-12 col-md-6">
-        <div class="text">
-          <h2>Kristina Hendel</h2>
-          <p>
-            ...gehört von Kindesbeinen an zu den besten Läuferinnen ihres Heimatlandes Kroatien.
-            Dort hält sie
-            noch immer einen nationalen Rekord. Je länger ihre Karriere andauert, desto länger
-            werden auch ihre
-            Erfolgsstrecken.
-          </p>
+    <section class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <div class="text animate-text left">
+            <h2>Kristina Hendel</h2>
+            <p>
+              ...gehört von Kindesbeinen an zu den besten Läuferinnen ihres Heimatlandes Kroatien.
+              Dort hält sie
+              noch immer einen nationalen Rekord. Je länger ihre Karriere andauert, desto länger
+              werden auch ihre
+              Erfolgsstrecken.
+            </p>
+          </div>
+        </div>
+        <div
+          class="col-sm-12 col-md-6 blob blob-right image justify-content-center justify-content-md-end">
+          <img class="img-fluid animate-image" src="assets/img/no-bg/011_ret-sw.png"
+            alt="Kristina Hendel im Trainingsanzug Ganzkörperaufnahme">
         </div>
       </div>
-      <div
-        class="col-sm-12 col-md-6 blob blob-right image justify-content-center justify-content-md-end">
-        <img class="img-fluid" src="assets/img/no-bg/011_ret-sw.png"
-          alt="Kristina Hendel im Trainingsanzug Ganzkörperaufnahme">
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="section3" class="container">
-    <div class="row">
-      <div
-        class="col-sm-12 col-md-6 blob blob-left image justify-content-center justify-content-md-start">
-        <img class="img-fluid" src="assets/img/no-bg/017_ret-sw.png"
-          alt="Sebastian Hendel im Trainingsanzug Ganzkörperaufnahme">
-      </div>
-      <div class="col-sm-12 col-md-6">
-        <div class="text">
-          <h2>Sebastian Hendel</h2>
-          <p>
-            ...verdankt seinen Namen einem ganz Großen der Leichtathletik. Dass der Reichenbacher
-            einmal eine
-            große Läuferkarriere einschlagen würde, konnten sich seine ersten Trainer allerdings
-            kaum
-            vorstellen.
-          </p>
+    <section class="container">
+      <div class="row">
+        <div
+          class="col-sm-12 col-md-6 blob blob-left image justify-content-center justify-content-md-start">
+          <img class="img-fluid animate-image" src="assets/img/no-bg/017_ret-sw.png"
+            alt="Sebastian Hendel im Trainingsanzug Ganzkörperaufnahme">
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <div class="text animate-text right">
+            <h2>Sebastian Hendel</h2>
+            <p>
+              ...verdankt seinen Namen einem ganz Großen der Leichtathletik. Dass der Reichenbacher
+              einmal eine
+              große Läuferkarriere einschlagen würde, konnten sich seine ersten Trainer allerdings
+              kaum
+              vorstellen.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-
-
+    </section>
+    <footer></footer>
+  </main>
 
 </body>
 
