--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="assets/svg/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="src/scss/style.scss">
-  <script defer type="module" src="src/js/main.js"></script>
-  <title>Vite App</title>
+
+  <link rel="stylesheet" href="scss/style.scss">
+  <script defer type="module" src="js/main.js"></script>
+  <title>Hendel Running</title>
 </head>
 
 <body>
+
   <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
     <div class="container">
       <a class="navbar-brand" href="#">
@@ -24,7 +26,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">Über uns</a>
+            <a class="nav-link" href="about-us" onclick="route()">Über uns</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Kristina</a>
@@ -37,11 +39,11 @@
     </div>
   </nav>
 
-  <main>
+  <main id="app">
     <header class="container blob">
       <div class="row">
         <div class="col-sm-12 col-md-6">
-          <div class="text animate-text left">
+          <div class="text animate left">
             <h1>Gemeinsam nach Paris</h1>
             <p>
               Jeder Sportler träumt von einem Start bei Olympischen Spielen. Kristina und Sebastian
@@ -54,7 +56,7 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6 blob blob-bottom">
-          <div class="image animate-image">
+          <div class="image animate">
             <img class="img-fluid" src="assets/img/no-bg/008_ret-sw.png"
               alt="Kristina und Sebastian Hendel Seite an Seite im Trainingsanzug">
           </div>
@@ -67,40 +69,75 @@
         <div class="row sponsor-row-1">
           <div class="col-4">
             <div class="image">
-              <img src="assets/img/sponsors/cropped-DATEC-Ideen-rund-um-dokumente.png" alt=""
-                class="img-fluid">
+              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
             </div>
           </div>
           <div class="col-4">
             <div class="image">
-              <img src="assets/img/sponsors/cropped-DATEC-Ideen-rund-um-dokumente.png" alt=""
-                class="img-fluid">
+              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
             </div>
           </div>
           <div class="col-4">
             <div class="image">
-              <img src="assets/img/sponsors/cropped-DATEC-Ideen-rund-um-dokumente.png" alt=""
-                class="img-fluid">
+              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
             </div>
           </div>
         </div>
         <div class="row sponsor-row-2">
           <div class="col-4">
             <div class="image">
-              <img src="assets/img/sponsors/cropped-DATEC-Ideen-rund-um-dokumente.png" alt=""
-                class="img-fluid">
+              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
             </div>
           </div>
           <div class="col-4">
             <div class="image">
-              <img src="assets/img/sponsors/cropped-DATEC-Ideen-rund-um-dokumente.png" alt=""
-                class="img-fluid">
+              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
             </div>
           </div>
           <div class="col-4">
             <div class="image">
-              <img src="assets/img/sponsors/cropped-DATEC-Ideen-rund-um-dokumente.png" alt=""
-                class="img-fluid">
+              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="sponsors hide-on-desktop">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <div class="image animate left">
+              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="image animate right">
+              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <div class="image animate left">
+              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="image animate right">
+              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <div class="image animate left">
+              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="image animate right">
+              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
             </div>
           </div>
         </div>
@@ -109,12 +146,13 @@
 
     <section class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image">
-          <img class="img-fluid animate-image" src="assets/img/no-bg/114_ret-sw.png"
+        <div
+          class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center justify-content-md-start">
+          <img class="img-fluid animate" src="assets/img/no-bg/114_ret-sw.png"
             alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt Ganzkörperaufnahme">
         </div>
         <div class="col-sm-12 col-md-6 order-1 order-md-2">
-          <div class="text animate-text right">
+          <div class="text animate right">
             <h2>Seit 2015 unzertrennlich</h2>
             <p>
               Kristian und Sebastian Hendel lernten sich 2015 beim Sportstudium in New York kennen
@@ -133,7 +171,7 @@
     <section class="container">
       <div class="row">
         <div class="col-sm-12 col-md-6">
-          <div class="text animate-text left">
+          <div class="text animate left">
             <h2>Kristina Hendel</h2>
             <p>
               ...gehört von Kindesbeinen an zu den besten Läuferinnen ihres Heimatlandes Kroatien.
@@ -146,7 +184,7 @@
         </div>
         <div
           class="col-sm-12 col-md-6 blob blob-right image justify-content-center justify-content-md-end">
-          <img class="img-fluid animate-image" src="assets/img/no-bg/011_ret-sw.png"
+          <img class="img-fluid animate" src="assets/img/no-bg/011_ret-sw.png"
             alt="Kristina Hendel im Trainingsanzug Ganzkörperaufnahme">
         </div>
       </div>
@@ -155,12 +193,12 @@
     <section class="container">
       <div class="row">
         <div
-          class="col-sm-12 col-md-6 blob blob-left image justify-content-center justify-content-md-start">
-          <img class="img-fluid animate-image" src="assets/img/no-bg/017_ret-sw.png"
+          class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center justify-content-md-start">
+          <img class="img-fluid animate" src="assets/img/no-bg/017_ret-sw.png"
             alt="Sebastian Hendel im Trainingsanzug Ganzkörperaufnahme">
         </div>
-        <div class="col-sm-12 col-md-6">
-          <div class="text animate-text right">
+        <div class="col-sm-12 order-1 order-md-2 col-md-6">
+          <div class="text animate right">
             <h2>Sebastian Hendel</h2>
             <p>
               ...verdankt seinen Namen einem ganz Großen der Leichtathletik. Dass der Reichenbacher
@@ -173,7 +211,9 @@
         </div>
       </div>
     </section>
-    <footer></footer>
+    <footer>
+
+    </footer>
   </main>
 
 </body>
