--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="assets/svg/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <link rel="stylesheet" href="scss/style.scss">
   <script defer type="module" src="js/main.js"></script>
+
   <title>Hendel Running</title>
 </head>
 
@@ -15,7 +15,7 @@
 
   <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/" onclick="route()">
         <img src="assets/svg/logo.svg" width="40" height="40" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -29,10 +29,10 @@
             <a class="nav-link" href="about-us" onclick="route()">Über uns</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Kristina</a>
+            <a class="nav-link" href="kristina" onclick="route()">Kristina</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sebastian</a>
+            <a class="nav-link" href="sebastian" onclick="route()">Sebastian</a>
           </li>
         </ul>
       </div>
@@ -40,181 +40,191 @@
   </nav>
 
   <main id="app">
-    <header class="container blob">
-      <div class="row">
-        <div class="col-sm-12 col-md-6">
-          <div class="text animate left">
-            <h1>Gemeinsam nach Paris</h1>
-            <p>
-              Jeder Sportler träumt von einem Start bei Olympischen Spielen. Kristina und Sebastian
-              Hendel aus
-              Reichenbach verbindet die Liebe zueinander und zum Laufsport. Ein gemeinsamer Start
-              bei
-              Olympia 2024
-              in Paris ist ihr großes Ziel.
-            </p>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 blob blob-bottom">
-          <div class="image animate">
-            <img class="img-fluid" src="assets/img/no-bg/008_ret-sw.png"
-              alt="Kristina und Sebastian Hendel Seite an Seite im Trainingsanzug">
-          </div>
-        </div>
-      </div>
-    </header>
-
-    <section class="sponsors hide-on-mobile">
-      <div class="container">
-        <div class="row sponsor-row-1">
-          <div class="col-4">
-            <div class="image">
-              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="image">
-              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="image">
-              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
-            </div>
-          </div>
-        </div>
-        <div class="row sponsor-row-2">
-          <div class="col-4">
-            <div class="image">
-              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="image">
-              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="image">
-              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="sponsors hide-on-desktop">
-      <div class="container">
+    <noscript>
+      <header class="container blob">
         <div class="row">
-          <div class="col-6">
-            <div class="image animate left">
-              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+          <div class="col-sm-12 col-md-6">
+            <div class="text animate left">
+              <h1>Gemeinsam nach Paris</h1>
+              <p>
+                Jeder Sportler träumt von einem Start bei Olympischen Spielen. Kristina und
+                Sebastian
+                Hendel aus
+                Reichenbach verbindet die Liebe zueinander und zum Laufsport. Ein
+                gemeinsamer Start
+                bei
+                Olympia 2024
+                in Paris ist ihr großes Ziel.
+              </p>
             </div>
           </div>
-          <div class="col-6">
-            <div class="image animate right">
-              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+          <div class="col-sm-12 col-md-6 blob blob-bottom">
+            <div class="image animate">
+              <img class="img-fluid" src="assets/img/no-bg/008_ret-sw.png"
+                alt="Kristina und Sebastian Hendel Seite an Seite im Trainingsanzug">
             </div>
           </div>
         </div>
+      </header>
+
+      <section class="sponsors hide-on-mobile">
+        <div class="container">
+          <div class="row sponsor-row-1">
+            <div class="col-4">
+              <div class="image">
+                <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="image">
+                <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="image">
+                <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div>
+          <div class="row sponsor-row-2">
+            <div class="col-4">
+              <div class="image">
+                <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="image">
+                <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="image">
+                <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="sponsors hide-on-desktop">
+        <div class="container">
+          <div class="row">
+            <div class="col-6">
+              <div class="image animate left">
+                <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="image animate right">
+                <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="image animate left">
+                <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="image animate right">
+                <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="image animate left">
+                <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="image animate right">
+                <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="container">
         <div class="row">
-          <div class="col-6">
-            <div class="image animate left">
-              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
-            </div>
+          <div
+            class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center justify-content-md-start">
+            <img class="img-fluid animate" src="assets/img/no-bg/114_ret-sw.png"
+              alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt Ganzkörperaufnahme">
           </div>
-          <div class="col-6">
-            <div class="image animate right">
-              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+          <div class="col-sm-12 col-md-6 order-1 order-md-2">
+            <div class="text animate right">
+              <h2>Seit 2015 unzertrennlich</h2>
+              <p>
+                Kristian und Sebastian Hendel lernten sich 2015 beim Sportstudium in New
+                York kennen
+                und
+                lieben.
+                Seitdem verfolgen sie ihre sportlichen Ziele gemeinsam. Dabei galt es einige
+                ungeplante
+                Hürden zu
+                überwinden.
+              </p>
             </div>
           </div>
         </div>
+      </section>
+
+      <section class="container">
         <div class="row">
-          <div class="col-6">
-            <div class="image animate left">
-              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+          <div class="col-sm-12 col-md-6">
+            <div class="text animate left">
+              <h2>Kristina Hendel</h2>
+              <p>
+                ...gehört von Kindesbeinen an zu den besten Läuferinnen ihres Heimatlandes
+                Kroatien.
+                Dort hält sie
+                noch immer einen nationalen Rekord. Je länger ihre Karriere andauert, desto
+                länger
+                werden auch ihre
+                Erfolgsstrecken.
+              </p>
             </div>
           </div>
-          <div class="col-6">
-            <div class="image animate right">
-              <img src="assets/svg/sponsors/datec.svg" alt="" class="img-fluid">
+          <div
+            class="col-sm-12 col-md-6 blob blob-right image justify-content-center justify-content-md-end">
+            <img class="img-fluid animate" src="assets/img/no-bg/011_ret-sw.png"
+              alt="Kristina Hendel im Trainingsanzug Ganzkörperaufnahme">
+          </div>
+        </div>
+      </section>
+
+      <section class="container">
+        <div class="row">
+          <div
+            class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center justify-content-md-start">
+            <img class="img-fluid animate" src="assets/img/no-bg/017_ret-sw.png"
+              alt="Sebastian Hendel im Trainingsanzug Ganzkörperaufnahme">
+          </div>
+          <div class="col-sm-12 order-1 order-md-2 col-md-6">
+            <div class="text animate right">
+              <h2>Sebastian Hendel</h2>
+              <p>
+                ...verdankt seinen Namen einem ganz Großen der Leichtathletik. Dass der
+                Reichenbacher
+                einmal eine
+                große Läuferkarriere einschlagen würde, konnten sich seine ersten Trainer
+                allerdings
+                kaum
+                vorstellen.
+              </p>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-
-    <section class="container">
-      <div class="row">
-        <div
-          class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center justify-content-md-start">
-          <img class="img-fluid animate" src="assets/img/no-bg/114_ret-sw.png"
-            alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt Ganzkörperaufnahme">
-        </div>
-        <div class="col-sm-12 col-md-6 order-1 order-md-2">
-          <div class="text animate right">
-            <h2>Seit 2015 unzertrennlich</h2>
-            <p>
-              Kristian und Sebastian Hendel lernten sich 2015 beim Sportstudium in New York kennen
-              und
-              lieben.
-              Seitdem verfolgen sie ihre sportlichen Ziele gemeinsam. Dabei galt es einige
-              ungeplante
-              Hürden zu
-              überwinden.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-6">
-          <div class="text animate left">
-            <h2>Kristina Hendel</h2>
-            <p>
-              ...gehört von Kindesbeinen an zu den besten Läuferinnen ihres Heimatlandes Kroatien.
-              Dort hält sie
-              noch immer einen nationalen Rekord. Je länger ihre Karriere andauert, desto länger
-              werden auch ihre
-              Erfolgsstrecken.
-            </p>
-          </div>
-        </div>
-        <div
-          class="col-sm-12 col-md-6 blob blob-right image justify-content-center justify-content-md-end">
-          <img class="img-fluid animate" src="assets/img/no-bg/011_ret-sw.png"
-            alt="Kristina Hendel im Trainingsanzug Ganzkörperaufnahme">
-        </div>
-      </div>
-    </section>
-
-    <section class="container">
-      <div class="row">
-        <div
-          class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center justify-content-md-start">
-          <img class="img-fluid animate" src="assets/img/no-bg/017_ret-sw.png"
-            alt="Sebastian Hendel im Trainingsanzug Ganzkörperaufnahme">
-        </div>
-        <div class="col-sm-12 order-1 order-md-2 col-md-6">
-          <div class="text animate right">
-            <h2>Sebastian Hendel</h2>
-            <p>
-              ...verdankt seinen Namen einem ganz Großen der Leichtathletik. Dass der Reichenbacher
-              einmal eine
-              große Läuferkarriere einschlagen würde, konnten sich seine ersten Trainer allerdings
-              kaum
-              vorstellen.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <footer>
-
-    </footer>
+      </section>
+    </noscript>
   </main>
+
+  <footer>
+
+  </footer>
 
 </body>
 
