--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
 
   <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
     <div class="container">
-      <a class="navbar-brand" href="/" onclick="route()">
-        <img src="assets/svg/logo.svg" width="40" height="40" alt="">
+      <a class="navbar-brand nav-link" onclick="route()">
+        <img src="assets/img/logo.png" width="40" height="40" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
