add more content to sebastian.html

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -145,9 +145,9 @@
     <section class="container">
       <div class="row">
         <div
-          class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center justify-content-md-start">
+          class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center">
           <img class="img-fluid animate" src="../assets/img/no-bg/114_ret-sw.png"
-            alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt Ganzkörperaufnahme">
+            alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt, Ganzkörperaufnahme">
         </div>
         <div class="col-sm-12 col-md-6 order-1 order-md-2">
           <div class="text animate right">
@@ -167,7 +167,7 @@
       </div>
     </section>
 
-    <section class="container">
+    <section id="kristina-index" class="container">
       <div class="row">
         <div class="col-sm-12 col-md-6">
           <div class="text animate left">
@@ -183,20 +183,19 @@
             </p>
           </div>
         </div>
-        <div
-          class="col-sm-12 col-md-6 blob blob-right image justify-content-center justify-content-md-end">
+        <div class="col-sm-12 col-md-6 blob blob-right image justify-content-center">
           <img class="img-fluid animate" src="../assets/img/no-bg/011_ret-sw.png"
-            alt="Kristina Hendel im Trainingsanzug Ganzkörperaufnahme">
+            alt="Kristina Hendel im Trainingsanzug, Ganzkörperaufnahme">
         </div>
       </div>
     </section>
 
-    <section class="container">
+    <section id="sebastian-index" class="container">
       <div class="row">
         <div
-          class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center justify-content-md-start">
+          class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center justify-content-md-center">
           <img class="img-fluid animate" src="../assets/img/no-bg/017_ret-sw.png"
-            alt="Sebastian Hendel im Trainingsanzug Ganzkörperaufnahme">
+            alt="Sebastian Hendel im Trainingsanzug, Ganzkörperaufnahme">
         </div>
         <div class="col-sm-12 order-1 order-md-2 col-md-6">
           <div class="text animate right">
