--- a/src/pages/sebastian.html
+++ b/src/pages/sebastian.html
@@ -46,7 +46,7 @@
 
         <section class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-6">
+                <div class="col-sm-12 col-lg-6">
                     <div class="text animate left">
                         <h2>Werdegang...</h2>
                         <p>
@@ -72,6 +72,14 @@
                             der Bahn, der Straße und im
                             Crosslauf.
                         </p>
+                    </div>
+                    <div
+                        class="col-sm-12 col-lg-6 blob blob-right image justify-content-center justify-content-md-center d-lg-none d-flex">
+                        <img id="sebastian-full" class="img-fluid animate"
+                            src="../assets/img/no-bg/017_ret-sw.png"
+                            alt="Sebastian Hendel im Trainingsanzug, Ganzkörperaufnahme">
+                    </div>
+                    <div class="text animate left">
                         <h2>Der Weg an die Spitze</h2>
                         <p>
                             Trainingsfleiß und Beharrlichkeit führten dazu, dass auch Erfolge auf
@@ -99,12 +107,103 @@
                     </div>
                 </div>
                 <div
-                    class="col-sm-12 col-md-6 blob blob-right image justify-content-center justify-content-md-center">
+                    class="col-sm-12 col-lg-6 blob blob-right image justify-content-center justify-content-md-center d-none d-lg-flex">
                     <img class="img-fluid animate" src="../assets/img/no-bg/017_ret-sw.png"
-                        alt="Kristina Hendel im Trainingsanzug Ganzkörperaufnahme">
+                        alt="Sebastian Hendel im Trainingsanzug, Ganzkörperaufnahme">
                 </div>
             </div>
         </section>
+
+        <section class="container">
+            <div class="row">
+                <div
+                    class="col-sm-12 col-lg-6 order-1 order-lg-0 blob blob-left image justify-content-center d-flex">
+                    <img class="img-fluid animate" src="../assets/img/no-bg/128_ret-sw.png"
+                        alt="Sebastian Hendel im Laufschritt, Ganzkörperaufnahme">
+                </div>
+                <div class="col-sm-12 col-lg-6 order-0 order-lg-1">
+                    <div class="text animate right">
+                        <h2>Doppelter Paukenschlag</h2>
+                        <p>
+                            Nach der Geburt des Sohnes Jonathan stellte sich Sebastian Hendel die
+                            Qualifikation für die
+                            U-23-Europameisterschaft 2017 im polnischen Bydgoszcz zum Ziel. Auf dem
+                            Weg dorthin lief er im Mai
+                            2017 in Oordegem (Belgien) die 5000 Meter erstmals unter 14 Minuten. Bei
+                            der EM kam Sebastian als
+                            Achter ins Ziel. 2018 sollte dann sein großes Jahr werden. Völlig
+                            überraschend wurde er im Mai in
+                            Pliezhausen Deutscher Meister über 10.000 Meter, im Juli ließ er in
+                            Nürnberg den nächsten
+                            Paukenschlag folgen und holte sich auch den Meistertitel über 5000
+                            Meter. Damit hatte er auch die
+                            Fahrkarte zur EM in Berlin in der Tasche, wo er über 10.000 Meter mit
+                            Platz 24 zweitbester Deutscher
+                            wurde. 2019 folgten der Vizemeistertitel über 10.000 Meter sowie Platz 3
+                            mit der deutschen
+                            Mannschaft im 10.000-Meter-Europacup. 2021 schließlich erkämpfte
+                            Sebastian Hendel Silber bei den
+                            Deutschen Meisterschaften im Halbmarathon. Zwei Wochen später ließ er
+                            Platz 4 bei den Titelkämpfen
+                            im 10.000-Meter-Straßenlauf folgen.
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="leistungen">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-xl-6">
+                        <h2>Bestleistungen</h2>
+                        <ul>
+                            <li>
+                                <span>5000m</span>
+                                <span>13:49 min</span>
+                                <span>Oordegem BEL (2018)</span>
+                            </li>
+                            <li>
+                                <span>10km</span>
+                                <span>28:35 min</span>
+                                <span>Berlin (2021)</span>
+                            </li>
+                            <li>
+                                <span>10.000m</span>
+                                <span>28:27 min</span>
+                                <span>London GBR (2019)</span>
+                            </li>
+                            <li>
+                                <span>Halbmarathon</span>
+                                <span>62:25 min</span>
+                                <span>Hamburg (2021)</span>
+                            </li>
+                            <li>
+                                <span>Marathon</span>
+                                <span>2:10:37 h</span>
+                                <span>München (2022)</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-12 col-xl-6">
+                        <h2>Erfolge</h2>
+                        <ul>
+                            <li><span>Teilnahme WM U20 1500m - Eugene, USA (2014)</span></li>
+                            <li><span>8. Platz U23 EM 5000m - Bydgosczc, POL (2017)</span></li>
+                            <li><span>Deutscher Meister 5000m und 10.000m - (2018)</span></li>
+                            <li><span>Teilnahme EM 10.000m - Berlin (2018)</span></li>
+                            <li><span>Deutscher Vizemeister 10.000m - Essen (2019)</span></li>
+                            <li><span>Deutscher Vizemeister Halbmarathon - Hamburg (2021)</span>
+                            </li>
+                            <li><span>Schnellster Europäer - München Marathon (2022)</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <section></section>
     </main>
 
     <footer>
