add content to kristina.html and about-us.html

--- a/src/pages/kristina.html
+++ b/src/pages/kristina.html
@@ -35,16 +35,182 @@
         </div>
     </nav>
 
-    <main id="sebastian" class="subpage">
+    <main id="kristina" class="subpage">
         <header class="subpage-header">
             <div class="container">
                 <h2>Vom Ungeplanten Glück</h2>
                 <h1><span class="fName">Kristina</span> <span class="lName">Hendel</span></h1>
             </div>
         </header>
+
+        <section class="container">
+            <div class="row">
+                <div class="col-sm-12 col-lg-6">
+                    <div class="text animate left">
+                        <h2>Anfänge</h2>
+                        <p>
+                            Kristina Bozic – so ihr Mädchenname – ist in der kroatischen Hauptstadt
+                            Zagreb aufgewachsen. Der
+                            Sport spielte von Kindesbeinen an eine wichtige Rolle in ihrem Leben.
+                            Allerdings fand sie erst über
+                            Umwege zur Leichtathletik. Mit neun Jahren begann Kristina zunächst
+                            Tennis
+                            zu spielen und bewies
+                            auch dabei einiges Talent. Doch schnell zeigte sich, dass sie besondere
+                            läuferische Stärken hat, und
+                            so wechselte sie 2008, im Alter von zwölf Jahren, zu den Leichtathleten.
+                            Schnell zeigte sich, dass
+                            ihr die längeren Strecken besonders liegen. Nur kurze Zeit später zählte
+                            sie
+                            zu den besten
+                            Langstreckenläuferinnen Kroatiens. Die ersten Erfolge ließen nicht lange
+                            auf
+                            sich warten. 2012, im
+                            Alter von 16 Jahren, startete sie in Barcelona zum ersten Mal bei einer
+                            U-20-Weltmeisterschaft über
+                            3000 Meter Hindernis. 2013, mit gerade einmal 17 Jahren, gewann Kristina
+                            im
+                            3000-Meter-Hindernislauf
+                            ihren ersten nationalen Titel. Schon im Jahr zuvor war sie auf dieser
+                            Strecke kroatische Vizemeisterin gewesen.
+                        </p>
+                    </div>
+                    <div
+                        class="col-sm-12 col-lg-6 blob blob-right image justify-content-center justify-content-md-center d-lg-none d-flex">
+                        <img id="sebastian-full" class="img-fluid animate"
+                            src="../assets/img/no-bg/002_ret-sw.png"
+                            alt="Sebastian Hendel im Trainingsanzug, Ganzkörperaufnahme">
+                    </div>
+                    <div class="text animate left">
+                        <h2>Nationale Spitze</h2>
+                        <p>
+                            2014 startete Kristina Hendel zum dritten Mal bei den kroatischen
+                            Meisterschaften im
+                            3000-Meter-Hindernislauf und verteidigte dabei den im Vorjahr errungenen
+                            Titel. Während ihres ersten
+                            Studiensemesters 2015 am Iona College in New York konzentrierte sie sich
+                            zunächst auf den Crosslauf,
+                            merkte aber schnell, dass das nicht das Richtige für sie ist. Das neue
+                            Umfeld und neue
+                            Trainingsmethoden sollten dennoch schnell zu gewachsenem
+                            Leistungsvermögen
+                            führen. So verbesserte
+                            sie während des Studiums den kroatischen Jugendrekord über 3000 Meter in
+                            der
+                            Halle. Auch nach ihrer
+                            Hochzeit, dem Umzug nach Deutschland sowie der Geburt ihres Sohnes
+                            Jonathan
+                            im Oktober 2016 startete
+                            Kristina Hendel weiterhin für Kroatien. Im 3000-Meter-Hindernislauf hält
+                            sie
+                            bis heute mit 10:02:20
+                            Minuten den Landesrekord, den sie 2018 als gerade einmal 22-Jährige im
+                            belgischen Oordegem
+                            aufgestellt hatte. Auch über 3000 Meter, 5000 Meter und 10.000 Meter
+                            gehört sie seit Jahren zu den Besten ihres Landes.
+                        </p>
+                    </div>
+                </div>
+                <div
+                    class="col-sm-12 col-lg-6 blob blob-right image justify-content-center justify-content-md-center d-none d-lg-flex">
+                    <img class="img-fluid animate" src="../assets/img/no-bg/002_ret-sw.png"
+                        alt="Sebastian Hendel im Trainingsanzug, Ganzkörperaufnahme">
+                </div>
+            </div>
+        </section>
+
+        <section class="container">
+            <div class="row">
+                <div
+                    class="col-sm-12 col-lg-6 order-1 order-lg-0 blob blob-left image justify-content-center d-flex">
+                    <img class="img-fluid animate" src="../assets/img/no-bg/134_ret-sw.png"
+                        alt="Sebastian Hendel im Laufschritt, Ganzkörperaufnahme">
+                </div>
+                <div class="col-sm-12 col-lg-6 order-0 order-lg-1">
+                    <div class="text animate right">
+                        <h2>Mutterschaft und Spitzensport</h2>
+                        <p>
+                            Wenn sich Kristina etwas in den Kopf gesetzt hat, dann ist es nicht so
+                            leicht, sie von ihrem
+                            Entschluss abzubringen. Ihren Dickkopf bewies sie auch im Herbst 2016,
+                            als sie schon kurz nach der
+                            Geburt ihres Sohnes den ärztlichen Rat in den Wind schlug und sehr
+                            schnell wieder ins Training
+                            einstieg. In kurzer Zeit erreichte sie wieder eine bestechende Form. Nur
+                            ein halbes Jahr nach der
+                            Geburt, im April 2017 verbesserte sie beim City-Lauf in Korschenbroich
+                            ihren persönlichen Rekord
+                            über 5000 Meter um über eine Minute. Im selben Monat wurde sie in
+                            persönlicher Bestzeit kroatische
+                            Meisterin über 10.000 Meter. Bei den folgenden
+                            U-23-Europameisterschaften in Polen lief sie über
+                            5000 Meter auf Platz 11 und über 10.000 Meter auf Platz 15. Inzwischen
+                            hat Kristina Hendel, die seit
+                            2021 auch einen deutschen Pass besitzt, den Marathon für sich entdeckt.
+                            Gleich bei ihrer
+                            Marathonpremiere 2021 in Essen siegte sie mit Streckenrekord von 2:27,30
+                            Stunden. Eine Zeit, die sie
+                            beim Hamburg-Marathon 2022 als Fünfte noch um eine Sekunde verbessern
+                            konnte.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="leistungen">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-xl-6">
+                        <h2>Bestleistungen</h2>
+                        <ul>
+                            <li>
+                                <span>3000m H</span>
+                                <span>10:02,20 min</span>
+                                <span>Oordegem, BEL (2018)</span>
+                            </li>
+                            <li>
+                                <span>5km</span>
+                                <span>15:52 min</span>
+                                <span>Angers, FRA (2021)</span>
+                            </li>
+                            <li>
+                                <span>10km</span>
+                                <span>32:35 min</span>
+                                <span>Berlin (2022)</span>
+                            </li>
+                            <li>
+                                <span>Halbmarathon</span>
+                                <span>70:36 min</span>
+                                <span>Istanbul, TUR (2021)</span>
+                            </li>
+                            <li>
+                                <span>Marathon</span>
+                                <span>2:27:29 h</span>
+                                <span>Hamburg (2022)</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-12 col-xl-6">
+                        <h2>Erfolge</h2>
+                        <ul>
+                            <li><span>Teilnahme WM U20 3000m H - Barcelona, ESP (2012)</span></li>
+                            <li><span>Finalistin WM U18 2000m H - Donezk, UKR (2013)</span></li>
+                            <li><span>Teilnahme EM U20 3000m H - Rieti, ITA (2013)</span></li>
+                            <li><span>Teilnahme WM U20 3000m H - Oregon, USA (2014)</span></li>
+                            <li><span>Finalistin EM U20 3000m H - Eskilstuna, SWE (2015)</span></li>
+                            <li><span>Teilnahme EM U23 10.000, 5000m - POL (2017)</span></li>
+                            <li><span>Siegerin Essen Marathon - (2021)</span></li>
+                            <li><span>Team Gold im Marathon - EM München (2022)</span></li>
+                            <li><span>Zahlreiche Medaillen bei kroatischen Meisterschaften</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </main>
-
-
 
     <footer>
 
