--- a/src/pages/sebastian.html
+++ b/src/pages/sebastian.html
@@ -162,7 +162,7 @@
                             <li>
                                 <span>5000m</span>
                                 <span>13:49 min</span>
-                                <span>Oordegem BEL (2018)</span>
+                                <span>Oordegem, BEL (2018)</span>
                             </li>
                             <li>
                                 <span>10km</span>
@@ -172,7 +172,7 @@
                             <li>
                                 <span>10.000m</span>
                                 <span>28:27 min</span>
-                                <span>London GBR (2019)</span>
+                                <span>London, GBR (2019)</span>
                             </li>
                             <li>
                                 <span>Halbmarathon</span>
@@ -203,7 +203,6 @@
             </div>
 
         </section>
-        <section></section>
     </main>
 
     <footer>
