--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -1,1 +1,177 @@
-About
+<!DOCTYPE html>
+<html lang="de">
+
+<head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="../assets/svg/logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sebastian und Kristina Hendel</title>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
+        <div class="container">
+            <a class="navbar-brand" href="/">
+                <img src="../assets/svg/logo.svg" width="40" height="40" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="about-us.html">Über uns</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="kristina.html">Kristina</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sebastian.html">Sebastian</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <main id="about-us" class="subpage">
+        <header class="subpage-header">
+            <div class="container">
+                <h2>Vom Ungeplanten Glück</h2>
+                <h1><span class="fName">Über</span> <span class="lName">Uns</span></h1>
+            </div>
+        </header>
+
+        <section class="container">
+            <div class="row">
+                <div
+                    class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center">
+                    <img class="img-fluid animate" src="../assets/img/no-bg/036_ret-sw.png"
+                        alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt, Ganzkörperaufnahme">
+                </div>
+                <div class="col-sm-12 col-md-6 order-1 order-md-2">
+                    <div class="text animate right">
+                        <h2>In New York fängt alles an</h2>
+                        <p>
+                            Die gemeinsame Geschichte von Kristina und Sebastian Hendel beginnt im
+                            August 2015 in den USA. Sie
+                            nutzten dort die vom Iona College in New York gebotene Chance, mit einem
+                            Sportstipendium parallel
+                            zum Studium an ihrer läuferischen Ausbildung zu feilen. Das College ist
+                            für sein starkes Laufteam
+                            bekannt, was den sportlichen Ambitionen der beiden entgegen kam, zählten
+                            sie doch zu diesem
+                            Zeitpunkt zu den talentiertesten Nachwuchsläufern ihrer Heimatländer
+                            Kroatien und Deutschland. Bis
+                            es zwischen beiden funkte, vergingen allerdings einige Wochen. Aus
+                            Trainingsgefährten wurde erst mit
+                            der Zeit ein ab Dezember schließlich unzertrennliches Liebespaar - bis
+                            im Januar 2016 der gemeinsame
+                            Sohn sein Kommen anmeldete. Kristinas Schwangerschaft brachte zwar die
+                            Pläne der beiden
+                            Leistungssportler gehörig durcheinander, warf sie aber nicht aus der
+                            Bahn. Auch wenn sie erst wenige
+                            Monate zusammen waren, verunsicherte sie diese Situation nicht, sie
+                            schweißte sie stattdessen enger
+                            zusammen. Kristina und Sebastian wussten, dass sie einander vertrauen
+                            können. Einige schwere
+                            Entscheidungen waren dennoch zu treffen. Nachdem sie ihre Zelte in New
+                            York abgebrochen hatten,
+                            entschieden sie sich, im Juli 2016 in Kristinas Heimat Kroatien zu
+                            heiraten. Anschließend zogen die
+                            junge Familie in Sebastians Heimatstadt Reichenbach im Vogtland, wo sie
+                            bis heute lebt und
+                            trainiert.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <div class="text animate right">
+                        <h2>Neues Leben zu dritt</h2>
+                        <p>
+                            Kristina blieben im Sommer und Herbst 2016 noch einige Wochen Zeit, sich
+                            an das Leben in Deutschland
+                            zu gewöhnen. Am 12. Oktober, kurz nach Mitternacht, erblickte Sohn
+                            Jonathan nach einigen für die
+                            junge Mutter anstrengenden Stunden auf der Entbindungsstation das Licht
+                            der Welt. Das Familienglück
+                            war perfekt. Das neue Leben zu dritt brachte aber auch einige knifflige
+                            neue Herausforderungen mit
+                            sich: Die Anforderungen bei der Betreuung des Babys bestimmten nun die
+                            Trainingszeiten und
+                            -umfänge. Den Tag wie bisher gewohnt durchzuplanen, erwies sich als
+                            schwierig. Doch mit viel
+                            Disziplin und nicht zuletzt mit der Unterstützung von Sebastians Familie
+                            wurde auch diese Hürde
+                            genommen. Die jungen Eltern wechselten sich in Jonathans ersten
+                            Lebensmonaten beim Babysitten
+                            ständig ab und stellten die Trainingszeiten auf dessen Stillzeiten ein,
+                            sodass beide die nötige Zeit
+                            fanden, den Körper in Schwung zu halten und an der Form zu feilen.
+                            Schritt für Schritt gelangten
+                            Kristina und Sebastian so auf ihr vorheriges Leistungsniveau zurück. Der
+                            Blick wurde frei für neue
+                            sportliche Herausforderungen.
+
+                        </p>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 image justify-content-center">
+                    <img class="img-fluid animate" src="../assets/img/no-bg/zu_dritt.png"
+                        alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt, Ganzkörperaufnahme">
+                </div>
+            </div>
+        </section>
+
+        <section class="container">
+            <div class="row">
+                <div
+                    class="col-sm-12 col-md-6 order-2 order-md-1 blob blob-left image justify-content-center">
+                    <img class="img-fluid animate" src="../assets/img/no-bg/149_ret-sw.png"
+                        alt="Kristina und Sebastian Hendel nebeneinander im Laufschritt, Ganzkörperaufnahme">
+                </div>
+                <div class="col-sm-12 col-md-6 order-1 order-md-2">
+                    <div class="text animate right">
+                        <h2>Auf zu neuen Zielen</h2>
+                        <p>
+                            Als junge Eltern in einer beschaulichen Kleinstadt leben und trainieren
+                            und dennoch das ganz große
+                            Ziel, einen Start bei den Olympischen Spielen, anpeilen – geht das?
+                            Kristina und Sebastian Hendel
+                            sind überzeugt: Das geht! Einige Rahmenbedingungen mussten sie aber
+                            natürlich verändern. Gingen sie
+                            bis Ende 2018 im Trikot des LAV Reichenbach und der
+                            Leichtathletikgemeinschaft Vogtland an den
+                            Start, so wechselten sie zu Jahresbeginn 2019 in ein noch etwas
+                            professionelleres Umfeld. Sie
+                            starten seitdem für das Laufteam Braunschweig. Doch trotz der
+                            Entscheidung, die Leidenschaft für das
+                            Laufen zum Beruf zu machen, bleibt der Lebensmittelpunkt für Kristina
+                            und Sebastian Hendel in
+                            Reichenbach. „Wir finden hier einfach ein perfektes Umfeld vor, bekommen
+                            den Leistungssport und ein
+                            intaktes Familienleben sehr gut unter einen Hut“, ist Sebastian
+                            überzeugt. Die Erfolge, die beide
+                            seitdem auf nationaler und internationaler Bühne erreichten, geben im
+                            recht und bestärken sie in der
+                            Überzeugung, den richtigen Weg zu beschreiten.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
+
+</body>
+
+</html>
