--- a/src/pages/legal-details.html
+++ b/src/pages/legal-details.html
@@ -14,10 +14,13 @@
             <a class="navbar-brand" href="/">
                 <img src="../assets/svg/logo.svg" width="40" height="40" alt="">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+            <button
+                class="navbar-toggler collapsed border-0 d-flex d-md-none flex-column justify-content-around"
+                type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="toggler-icon top-bar text-muted"></span>
+                <span class="toggler-icon middle-bar text-muted"></span>
+                <span class="toggler-icon bottom-bar text-muted"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
