--- a/src/pages/kristina.html
+++ b/src/pages/kristina.html
@@ -47,7 +47,7 @@
         </header>
 
         <section class="container">
-            <div class="row">
+            <div class="row align-items-start">
                 <div class="col-sm-12 col-lg-6">
                     <div class="text animate left">
                         <h2>Anfänge</h2>
@@ -78,8 +78,7 @@
                             Strecke kroatische Vizemeisterin gewesen.
                         </p>
                     </div>
-                    <div
-                        class="col-sm-12 col-lg-6 blob blob-right image justify-content-center justify-content-md-center d-lg-none d-flex">
+                    <div class="col-sm-12 col-lg-6 blob blob-right image d-lg-none d-flex">
                         <img id="sebastian-full" class="img-fluid animate"
                             src="../assets/img/no-bg/002_ret-sw.png"
                             alt="Sebastian Hendel im Trainingsanzug, Ganzkörperaufnahme">
@@ -114,8 +113,7 @@
                         </p>
                     </div>
                 </div>
-                <div
-                    class="col-sm-12 col-lg-6 blob blob-right image justify-content-center justify-content-md-center d-none d-lg-flex">
+                <div class="col-sm-12 col-lg-6 blob blob-right image d-none d-lg-flex">
                     <img class="img-fluid animate" src="../assets/img/no-bg/002_ret-sw.png"
                         alt="Sebastian Hendel im Trainingsanzug, Ganzkörperaufnahme">
                 </div>
@@ -124,8 +122,7 @@
 
         <section class="container">
             <div class="row">
-                <div
-                    class="col-sm-12 col-lg-6 order-1 order-lg-0 blob blob-left image justify-content-center d-flex">
+                <div class="col-sm-12 col-lg-6 order-1 order-lg-0 blob blob-left image">
                     <img class="img-fluid animate" src="../assets/img/no-bg/134_ret-sw.png"
                         alt="Sebastian Hendel im Laufschritt, Ganzkörperaufnahme">
                 </div>
