--- a/src/pages/sebastian.html
+++ b/src/pages/sebastian.html
@@ -48,7 +48,7 @@
 
 
         <section class="container">
-            <div class="row">
+            <div class="row align-items-start">
                 <div class="col-sm-12 col-lg-6">
                     <div class="text animate left">
                         <h2>Werdegang...</h2>
@@ -77,7 +77,7 @@
                         </p>
                     </div>
                     <div
-                        class="col-sm-12 col-lg-6 blob blob-right image justify-content-center justify-content-md-center d-lg-none d-flex">
+                        class="col-sm-12 col-lg-6 blob blob-right image justify-content-center d-lg-none d-flex">
                         <img id="sebastian-full" class="img-fluid animate"
                             src="../assets/img/no-bg/017_ret-sw.png"
                             alt="Sebastian Hendel im Trainingsanzug, Ganzkörperaufnahme">
@@ -109,8 +109,7 @@
                         </p>
                     </div>
                 </div>
-                <div
-                    class="col-sm-12 col-lg-6 blob blob-right image justify-content-center justify-content-md-center d-none d-lg-flex">
+                <div class="col-sm-12 col-lg-6 blob blob-right image d-none d-lg-flex">
                     <img class="img-fluid animate" src="../assets/img/no-bg/017_ret-sw.png"
                         alt="Sebastian Hendel im Trainingsanzug, Ganzkörperaufnahme">
                 </div>
@@ -119,8 +118,7 @@
 
         <section class="container">
             <div class="row">
-                <div
-                    class="col-sm-12 col-lg-6 order-1 order-lg-0 blob blob-left image justify-content-center d-flex">
+                <div class="col-sm-12 col-lg-6 order-1 order-lg-0 blob blob-left image">
                     <img class="img-fluid animate" src="../assets/img/no-bg/128_ret-sw.png"
                         alt="Sebastian Hendel im Laufschritt, Ganzkörperaufnahme">
                 </div>
